--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,15 @@
       <div><a href="/dice/5/4">5d4</a></div>
     </div>
 
+    <h1>Dice Roll</h1>
+
+    <ul>
+      <li><a href="/dice/2/6">Roll two 6-sided dice</a></li>
+      <li><a href="/dice/2/10">Roll two 10-sided dice</a></li>
+      <li><a href="/dice/1/20">Roll one 20-sided die</a></li>
+      <li><a href="/dice/5/4">Roll five 4-sided dice</a></li>
+    </ul>
+
     <%= yield %>
 
   </body>
